Adds currency controller and service

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,7 @@
-spring.application.name: currencyscraper
+spring:
+  application.name: currencyscraper
+
+server:
+  port: 0
 
 app.currency.nbp.url: https://api.nbp.pl/api/exchangerates/tables/a?format=json
