--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,4 @@ logging.level.reactor.netty.http.client: DEBUG
 app.currency:
   nbp.url: https://api.nbp.pl/api/exchangerates/tables/a?format=json
   nbs.url: https://moduli.erstebank.rs//aspx/kursna_lista/datum_slr.aspx
+  btc.url: https://api.coindesk.com/v1/bpi/currentprice/USD.json
